# S6_OpenGL_TP

./: README.md
TP2/: CMakeLists.txt
TP2/include/: VBO.h  shaderClass.h
TP2/shaders/: default.frag.txt  default.vert.txt
TP2/src/: main.cpp
TP3/: CMakeLists.txt
TP3/include/: EBO.h  VAO.h  VBO.h  camera.h  cylinder.h  node.h  shaderClass.h  shape.h  sphere.h
TP3/src/: EBO.cpp  VAO.cpp  VBO.cpp  camera.cpp  cylinder.cpp  main.cpp  node.cpp  shaderClass.cpp  shape.cpp  sphere.cpp
TP4/: CMakeLists.txt
TP4/include/: EBO.h  VAO.h  camera.h  texture.h
TP4/shaders/: default.frag.txt  default.vert.txt
TP4/src/: EBO.cpp  VAO.cpp  VBO.cpp  camera.cpp  main.cpp  shaderClass.cpp
